force-app/main/default/objects/pendencia__c/pendencia__c.object-meta.xml
<CustomObject>
    <description>Ocorrência da pendência de um produto.</description>
    <label>Pendência</label>
    <nameField>
        <displayFormat>PEND-{000000000}</displayFormat>
        <label>Evento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pendências</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>