force-app/main/default/objects/pendencia__c/fields/fornecedores__c.field-meta.xml
<CustomField>
    <fullName>fornecedores__c</fullName>
    <label>Fornecedores</label>
    <length>255</length>
    <type>Text</type>
</CustomField>