force-app/main/default/objects/pendencia__c/fields/notaFiscal__c.field-meta.xml
<CustomField>
    <fullName>notaFiscal__c</fullName>
    <description>Nota fiscal da compra.</description>
    <label>Nota Fiscal</label>
    <length>50</length>
    <type>Text</type>
</CustomField>