force-app/main/default/objects/pendencia__c/fields/observacao__c.field-meta.xml
<CustomField>
    <fullName>observacao__c</fullName>
    <description>Observação do compras</description>
    <label>Observação</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>