force-app/main/default/objects/pendencia__c/fields/pedidoCompra__c.field-meta.xml
<CustomField>
    <fullName>pedidoCompra__c</fullName>
    <description>Pedido de compra do produto.</description>
    <label>Pedido de Compra</label>
    <length>100</length>
    <type>Text</type>
</CustomField>