force-app/main/default/objects/pendencia__c/fields/pedidoMaisAntigo__c.field-meta.xml
<CustomField>
    <fullName>pedidoMaisAntigo__c</fullName>
    <description>Pedido mais antigo referente ao DK</description>
    <label>Pedido mais antigo</label>
    <type>DateTime</type>
</CustomField>