force-app/main/default/objects/pendencia__c/fields/previsaoEntrega__c.field-meta.xml
<CustomField>
    <fullName>previsaoEntrega__c</fullName>
    <description>Previsão de entrega do dk.</description>
    <label>Previsão de entrega</label>
    <type>DateTime</type>
</CustomField>