force-app/main/default/objects/pendencia__c/fields/produto__c.field-meta.xml
<CustomField>
    <fullName>produto__c</fullName>
    <description>Produto que está em pendência</description>
    <label>Produto</label>
    <referenceTo>DK__c</referenceTo>
    <relationshipLabel>Eventos de Pendência</relationshipLabel>
    <relationshipName>pendencias</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>