force-app/main/default/objects/pendencia__c/fields/produtoRelacionado__c.field-meta.xml
<CustomField>
    <fullName>produtoRelacionado__c</fullName>
    <description>Produto relacionado.</description>
    <label>Produto relacionado</label>
    <length>100</length>
    <type>Text</type>
</CustomField>