force-app/main/default/objects/pendencia__c/fields/quantidadeNota__c.field-meta.xml
<CustomField>
    <fullName>quantidadeNota__c</fullName>
    <label>Quantidade da nota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>