force-app/main/default/objects/pendencia__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <description>Status do evento de pendência.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Concluído</fullName>
            </value>
            <value>
                <fullName>Em aberto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>