force-app/main/default/objects/pendencia__c/fields/statusAtendimento__c.field-meta.xml
<CustomField>
    <fullName>statusAtendimento__c</fullName>
    <label>Status do atendimento</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CANCELAMENTO</fullName>
            </value>
            <value>
                <fullName>COM PREVISÃO</fullName>
            </value>
            <value>
                <fullName>SIMILAR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>