force-app/main/default/objects/pendencia__c/fields/statusCompras__c.field-meta.xml
<CustomField>
    <fullName>statusCompras__c</fullName>
    <label>Status Compras</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OFERECER SIMILAR</fullName>
            </value>
            <value>
                <fullName>SEM PREVISÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>