force-app/main/default/objects/pendencia__c/fields/transportadora__c.field-meta.xml
<CustomField>
    <fullName>transportadora__c</fullName>
    <label>Transportadora</label>
    <length>255</length>
    <type>Text</type>
</CustomField>